test/src/e2e_vm_tests/test_programs/should_fail/pure_calls_impure/src/main.sw
contract;

// this should fail because a pure function cannot call an impure function

fn main() {
}


fn pure_function() {
  impure_function();
}

#[storage(write)]
fn impure_function() {}
